# nrf52-hal

./: Cargo.toml
examples/i2c-demo/: .gdbinit  Cargo.toml
examples/i2c-demo/.cargo/: config
examples/i2c-demo/src/: main.rs
nrf52-hal-common/src/: twim.rs
