[package]
name = "i2c-demo"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.5"
panic-halt = "0.2.0"
embedded-hal-spy = "0.0.3"
ssd1306 = "0.2.4"
embedded-graphics = "0.4.7"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.nrf52840-hal]
version = "0.7.0"
path = "../../nrf52840-hal"
optional = true

[dependencies.nrf52840-pac]
version = "0.6.0"
optional = true

[features]
52840 = ["nrf52840-hal", "nrf52840-pac"]
default = ["52840"]

[profile.release]
opt-level = 3
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev]
opt-level = 0
# codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
